# InfernoTemplate

./: .gitignore  CMakeLists.txt
resources/xml/: game.xml
schemas/: game.xsd
src/: game.cpp  game.h
src/scenes/: MainScene.cpp  MainScene.h
